crates/plotnik-tests/tests/02-parser/recovery_validation/negated_field_with_upper_ident.txt
Q = (call -Arguments)
------------------ DIAGNOSTICS -------------------
error: grammar field names must be snake_case
 --> query.ptk:1:12
  |
1 | Q = (call -Arguments)
  |            ^^^^^^^^^
  |
help: use `arguments`
  |
1 - Q = (call -Arguments)
1 + Q = (call -arguments)
  |
help: grammar field names are snake_case
